# kleinanzeigen-bot

./: .act-event.json  .actrc  .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  CONTRIBUTING.md  README.md  codecov.yml  pyinstaller.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  version.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yaml
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  publish-release.yml  stale.yml  test-coverage.yml  update-python-deps.yml  validate-pr-title.yml
docker/: build-image.sh
docker/image/: Dockerfile  run.sh
docs/: AD_CONFIGURATION.md  BROWSER_TROUBLESHOOTING.md  CONFIGURATION.md  INDEX.md  TESTING.md  TESTING_EXECUTABLES.md  TIMEOUTS.md  UPDATE_CHECK.md  config.default.yaml  update-check.md
kleinanzeigen_bot/: __init__.py  __main__.py  download.py  extract.py  selenium_mixin.py  selenium_support.py  utils.py  version.py
kleinanzeigen_bot/resources/: ad_fields.yaml  categories.yaml  config_defaults.yaml
schemas/: ad.schema.json  config.schema.json
scripts/: __init__.py  check_generated_artifacts.py  coverage_helper.py  fix_nodriver.py  fix_nodriver_encoding.py  format_code.py  generate_readme_commands.py  generate_schemas.py  git_utils.py  lint_code.py  post_autopep8.py  run_tests.py  schema_utils.py  verify_dom_assumptions.py
src/kleinanzeigen_bot/: __init__.py  __main__.py  ad_content.py  ad_description.py  ad_form_helpers.py  ad_loading.py  ad_state.py  ad_status.py  ads.py  app.py  captcha_flow.py  captcha_solver.py  cli.py  delete_flow.py  download_flow.py  download_selection.py  extend_flow.py  extract.py  i18n.py  local_path_renaming.py  logging.py  login_flow.py  message.py  price_reduction.py  published_ads.py  publishing_flow.py  publishing_form.py  publishing_persistence.py  publishing_submission.py  publishing_workflow.py  runtime_config.py  selenium_mixin.py  update_checker.py  utils.py  web_scraping_mixin.py
src/kleinanzeigen_bot/model/: ad_model.py  config_model.py  dom_rules_model.py  update_check_model.py  update_check_state.py
src/kleinanzeigen_bot/resources/: ad_fields.yaml  categories.yaml  categories_old.yaml  config_defaults.yaml  dom_rules.v1.json  translations.de.yaml
src/kleinanzeigen_bot/utils/: __init__.py  browser_diagnostics.py  browser_runtime_config.py  chrome_version_detector.py  color.py  description.py  diagnostics.py  dicts.py  dom_rules.py  error_handlers.py  exceptions.py  files.py  i18n.py  launch_mode_guard.py  loggers.py  login_mixin.py  misc.py  net.py  pydantics.py  reflect.py  timing_collector.py  web_scraping_mixin.py  xdg_paths.py
tests/: README.md  __init__.py  conftest.py  test_i18n.py  test_selenium_mixin.py  test_utils.py  test_web_scraping_mixin.py
tests/fixtures/: belen_conf_sample.json
tests/fixtures/demo_ads/: README.md
tests/fixtures/demo_ads/ad_000001_Gebr._Mixer_Rasselnde_Teile/: ad_000001_Gebr._Mixer_Rasselnde_Teile.yaml
tests/fixtures/demo_ads/ad_000002_Keramikvase_mit_Absprung/: ad_000002_Keramikvase_mit_Absprung.yaml
tests/fixtures/demo_ads/ad_000003_Alte_Küchentücher_Fleckig/: ad_000003_Alte_Küchentücher_Fleckig.yaml
tests/fixtures/demo_ads/ad_000004_Verzogene_Plastikdosen/: ad_000004_Verzogene_Plastikdosen.yaml
tests/fixtures/demo_ads/ad_000005_Rostiger_Gemüsehobel/: ad_000005_Rostiger_Gemüsehobel.yaml
tests/fixtures/demo_ads/ad_000006_Gesprungene_Schneidebrett/: ad_000006_Gesprungene_Schneidebrett.yaml
tests/fixtures/demo_ads/ad_000007_Alter_Röhrenmonitor_Vergilbt/: ad_000007_Alter_Röhrenmonitor_Vergilbt.yaml
tests/fixtures/demo_ads/ad_000008_Gebrauchte_Fernbedienung_Klemmt/: ad_000008_Gebrauchte_Fernbedienung_Klemmt.yaml
tests/fixtures/demo_ads/ad_000009_Defekte_LED-Lampe/: ad_000009_Defekte_LED-Lampe.yaml
tests/fixtures/demo_ads/ad_000010_Altes_Kofferradio_Geht_Nicht/: ad_000010_Altes_Kofferradio_Geht_Nicht.yaml
tests/fixtures/demo_ads/ad_000011_Steckerleiste_mit_Wackelkontakt/: ad_000011_Steckerleiste_mit_Wackelkontakt.yaml
tests/fixtures/demo_ads/ad_000012_Unvollständiges_Puzzle_Fehlende_Teile/: ad_000012_Unvollständiges_Puzzle_Fehlende_Teile.yaml
tests/fixtures/demo_ads/ad_000013_Schiefes_Keramik-Mug_Selbstgemacht/: ad_000013_Schiefes_Keramik-Mug_Selbstgemacht.yaml
tests/fixtures/demo_ads/ad_000014_Verknäulter_Fischernetz/: ad_000014_Verknäulter_Fischernetz.yaml
tests/integration/: test_viewport_sizing.py  test_web_scraping_mixin.py  test_web_scraping_mixin_integration.py
tests/smoke/: test_ad_config_handling.py  test_run_does_not_crash.py  test_smoke_health.py
tests/unit/: test_ad_content.py  test_ad_description.py  test_ad_form_helpers.py  test_ad_loading.py  test_ad_model.py  test_ad_state.py  test_ad_status.py  test_ads.py  test_ads_utils.py  test_app.py  test_bot.py  test_captcha_flow.py  test_chrome_version_detector.py  test_cli.py  test_color.py  test_config.py  test_config_model.py  test_delete_flow.py  test_diagnostics.py  test_dicts.py  test_dom_rules.py  test_dom_rules_model.py  test_download_flow.py  test_download_selection.py  test_error_handlers.py  test_extend_command.py  test_extend_flow.py  test_extract.py  test_extract_directory_collision.py  test_files.py  test_fix_nodriver.py  test_generate_readme_commands.py  test_humanization.py  test_i18n.py  test_init.py  test_json_pagination.py  test_launch_mode_guard.py  test_local_path_renaming.py  test_logging.py  test_login_flow.py  (+28 more)
tests/unit/extract/: test_extract.py  test_extract_image_manual.py  test_extract_image_nodriver.py  test_extract_image_simple.py  test_extract_simple.py  test_extract_url.py  test_extract_url_simple.py
tests/unit/init/: __init__.py  conftest.py  test_ads.py  test_ads_initialization.py  test_auth.py  test_basic.py  test_cli.py  test_config.py  test_localization.py  test_logging.py  test_publishing.py
(+20 files in other folders)
